--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,20 @@
 attrs
-opencv-python
+fasteners
 mdv==1.7.4
 numpy
 oarphpy==0.1.0
 open3d==0.11.1
+opencv-python
 pandas
 plotly>=4.2.1
+plyfile
 psutil
 pytest
+python-slugify
 scipy>=1.4.0
 six>=1.14.0
 sphinx-autoapi
 tabulate
+threadpoolctl
 xmltodict
 
