--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ ext_data
 external_test_fixtures
 notebooks/.ipynb_checkpoints
 notebooks/sparkmonitor_kernelextension.log
+notebooks/pybullet_debug_out.mp4
