--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -9,7 +9,7 @@ RUN pip3 install -r /tmp/requirements.txt
 
 # Pytorch3d
 RUN \
-  pip3 install torch torchvision torchaudio &&
+  pip3 install torch torchvision torchaudio && \
   pip3 install pytorch3d -f https://dl.fbaipublicfiles.com/pytorch3d/packaging/wheels/py38_cu102_pyt190/download.html
 
 RUN \
