--- a/.dockerignore
+++ b/.dockerignore
@@ -10,12 +10,15 @@ build
 docs/build
 ext_data
 external_test_fixtures
-notebooks/.ipynb_checkpoints
-notebooks/sparkmonitor_kernelextension.log
+notebooks/**/*
 test_*
 *.bag
-dataroot_costco
 dataroot
 test_run_output
+
+dataroot_costco
+my_html_viz
+trimeshtast*
 colmap*
 cv_charuco
+history*
