--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,19 +4,16 @@ FROM oarphpy/full:0.1.1
 COPY docker/bashrc /etc/bash.bashrc
 RUN chmod a+rwx /etc/bash.bashrc
 
-COPY requirements.txt /tmp/requirements.txt
-RUN pip3 install -r /tmp/requirements.txt
-
-# # Pytorch3d
-# RUN \
-#   pip3 install torch==1.9.0+cu111 torchvision==0.9.2+cu111 torchaudio==0.8.2 && \
-#   pip3 install pytorch3d==0.6.0 -f https://dl.fbaipublicfiles.com/pytorch3d/packaging/wheels/py38_cu111_pyt190/download.html
-
 RUN \
   apt-get update && \
   apt-get install -y \
     git \
     wget
+
+# # Pytorch3d
+# RUN \
+#   pip3 install torch==1.9.0+cu111 torchvision==0.9.2+cu111 torchaudio==0.8.2 && \
+#   pip3 install pytorch3d==0.6.0 -f https://dl.fbaipublicfiles.com/pytorch3d/packaging/wheels/py38_cu111_pyt190/download.html
 
 # # open3d
 # RUN apt-get install ffmpeg libsm6 libxext6 libc++-dev sudo git -y
@@ -44,6 +41,53 @@ RUN \
 # # ENV LD_LIBRARY_PATH ${LD_LIBRARY_PATH}:/usr/local/cuda-11.1/targets/x86_64-linux/lib/
 # RUN python3 -c ''
 
+# pycolmap and pycolmap: TODO use a wheel
+## COLMAP
+RUN \
+  apt-get install -y \
+    git \
+    cmake \
+    ninja-build \
+    build-essential \
+    libboost-program-options-dev \
+    libboost-filesystem-dev \
+    libboost-graph-dev \
+    libboost-system-dev \
+    libboost-test-dev \
+    libeigen3-dev \
+    libflann-dev \
+    libfreeimage-dev \
+    libmetis-dev \
+    libgoogle-glog-dev \
+    libgflags-dev \
+    libsqlite3-dev \
+    libglew-dev \
+    qtbase5-dev \
+    libqt5opengl5-dev \
+    libcgal-dev \
+    libceres-dev
+RUN \
+  cd /opt && \
+    (git clone --depth 1 --branch 3.8 https://github.com/colmap/colmap || true) && \
+    cd colmap && \
+    mkdir -p build && cd build && \
+    cmake .. -GNinja -DCUDA_ENABLED=OFF && \
+    ninja && \
+    ninja install && \
+    colmap -h
+RUN \
+  cd /opt && \
+  git clone --recursive https://github.com/colmap/pycolmap.git && \
+  cd pycolmap && \
+  git checkout 401f82658cdad1e8b657c77381863f9e261c7c3c && \
+  pip3 install -v -e .
+
+COPY requirements.txt /tmp/requirements.txt
+RUN \
+  pip3 install -r /tmp/requirements.txt && \
+  rm /tmp/requirements.txt
+
 RUN mkdir -p /opt/psegs
 COPY . /opt/psegs
 WORKDIR /opt/psegs
+ENV PYTHONPATH $PYTHONPATH:/opt/psegs
