--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,8 @@ attrs>=21.4.0
 fasteners
 imageio
 imageio-ffmpeg
-mdv==1.7.4
 numpy
-oarphpy[spark]==0.1.0
+oarphpy[spark]==0.1.1
 open3d>=0.11.1
 opencv-python>=4.5.5.62
 pandas
@@ -15,6 +14,7 @@ plyfile
 psutil
 pytest
 python-slugify
+rich
 scipy>=1.4.0
 six>=1.14.0
 sphinx-autoapi
