--- a/requirements.txt
+++ b/requirements.txt
@@ -13,10 +13,12 @@ pandas
 plotly>=4.2.1
 plyfile
 psutil
+pyspark==3.3.2
 pytest
 python-slugify
 rich
 scipy>=1.4.0
+shapely
 six>=1.14.0
 sphinx-autoapi
 tabulate
