--- a/requirements.txt
+++ b/requirements.txt
@@ -32,7 +32,8 @@ open3d>=0.11.1
 
 # Fixme did we need old one? maybe the old one was because of qt5 headless problems?
 # opencv-python>=4.5.5.62
-opencv-python-headless>=4.6.0
+opencv-python>=4.8.1
+opencv-python-headless>=4.8.1
 
 pandas
 plotly>=4.2.1
