--- a/requirements.txt
+++ b/requirements.txt
@@ -25,7 +25,7 @@ loguru
 
 # fixme why does 1.21.5 break? and who installs it?
 #numpy
-numpy>=1.26.1
+numpy>=1.26.1,<2
 
 oarphpy[spark]==0.1.1
 open3d>=0.11.1
